dep-files/null-app.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: phil
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phil-frontend
  labels:
    name: phil-frontend
  namespace: phil
spec:
  replicas: 1
  selector:
    matchLabels:
      name: phil-frontend
  template:
    metadata:
      labels:
        name: phil-frontend
    spec:
      containers:
      - name: phil-frontend
        image: kikeay/frontend:latest
        resources:
          limits:
            cpu: 300m
            memory: 1000Mi
          requests:
            cpu: 100m
            memory: 300Mi
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: phil-frontend
  labels:
    name: phil-frontend
  namespace: phil
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30003
  selector:
    name: phil-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    name: backend
  namespace: phil
spec:
  replicas: 1
  selector:
    matchLabels:
      name: backend
  template:
    metadata:
      labels:
        name: backend
    spec:
      containers:
      - name: backend
        image: kikeay/backend:latest
        resources:
          limits:
            cpu: 300m
            memory: 1000Mi
          requests:
            cpu: 100m
            memory: 300Mi
        ports:
        - containerPort: 3001

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    name: backend
  namespace: phil
spec:
  ports:
    # the port that this service should serve on
  - port: 3001
    targetPort: 3001
  selector:
    name: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phil-db
  labels:
    name: phil-db
  namespace: phil
spec:
  replicas: 1
  selector:
    matchLabels:
      name: phil-db
  template:
    metadata:
      labels:
        name: phil-db
    spec:
      containers:
      - name: phil-db
        image: mongo
        ports:
        - name: mongo
          containerPort: 27017
        securityContext:
          capabilities:
            drop:
              - all
            add:
              - CHOWN
              - SETGID
              - SETUID
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
      nodeSelector:
        kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: phil-db
  labels:
    name: phil-db
  namespace: phil
spec:
  ports:
    # the port that this service should serve on
  - port: 27017
    targetPort: 27017
  selector:
    name: phil-db
